# base

./: .gitignore  .gitmodules  .travis.yml  Base9Config.h.in  CMakeLists.txt  README.md  build.sh  build_local.sh  debug_build.sh
BASE9/: DESCRIPTION  NAMESPACE
BASE9/R/: RcppExports.R
BASE9/man/: BASE9-package.Rd
BASE9/src/: AlthausWdModel.cpp  BergeronAtmosphereModel.cpp  CarbonlessWdModel.cpp  ChabMsModel.cpp  Cluster.cpp  DsedMsModel.cpp  Filters.cpp  GenericMsModel.cpp  GirardiMsModel.cpp  Makevars  Makevars.osx  Model.cpp  MontgomeryWdModel.cpp  MsFilterSet.cpp  MsRgbModel.cpp  RcppExports.cpp  RenedoWdModel.cpp  Settings.cpp  Star.cpp  Utility.cpp  WdAtmosphereModel.cpp  WoodWdModel.cpp  YaleMsModel.cpp  base-bindings.cpp  binSearch.cpp  densities.cpp  ifmr.cpp  marg.cpp  samplers.cpp  structures.cpp  symbols.rds
BASE9/test/: test.cpp
base9/: BdModel.hpp  CMakeLists.txt  ChabMsModel.cpp  ChabMsModel.hpp  Chain.hpp  Cluster.cpp  Cluster.hpp  DsedMsModel.cpp  DsedMsModel.hpp  FilterSet.cpp  FilterSet.hpp  Filters.cpp  Filters.hpp  GirardiMsModel.cpp  GirardiMsModel.hpp  Isochrone.hpp  LinearTransform.hpp  Matrix.hpp  Model.cpp  Model.hpp  MsFilterSet.cpp  MsFilterSet.hpp  MsRgbModel.cpp  MsRgbModel.hpp  Settings.cpp  Settings.hpp  Settings_flymake.cpp  Star.cpp  Star.hpp  StellarModel.hpp  Utility.cpp  Utility.hpp  WdAtmosphereModel.cpp  WdAtmosphereModel.hpp  WdCoolingModel.hpp  WhiteDwarf.hpp  YaleMsModel.cpp  YaleMsModel.hpp  binSearch.c  binSearch.cpp  (+103 more)
base9/BdModels/: BaraffeBdModel.cpp  BaraffeBdModel.hpp
base9/IO/: BackingStore.hpp  FieldStarLikelihood.cpp  FieldStarLikelihood.hpp  FileBackingStore.ipp  MultiPopMcmc.cpp  MultiPopMcmc.hpp  Records.hpp  SampleMass.cpp  SampleMass.hpp  SampleWdMass.cpp  SampleWdMass.hpp  SinglePopMcmc.cpp  SinglePopMcmc.hpp  SqlBackingStore.ipp  Star.cpp  Star.hpp  StarParams.cpp  StarParams.hpp
base9/IO/sql/: BuildTables.sql
base9/MsRgbModels/: ChabMsModel.cpp  ChabMsModel.hpp  DsedMsModel.cpp  DsedMsModel.hpp  GenericMsModel.cpp  GenericMsModel.hpp  GirardiMsModel.cpp  GirardiMsModel.hpp  InvalidMsModel.hpp  NewDsedMsModel.hpp  NewYale.hpp  OldDsedMsModel.hpp  ParsecMsModel.hpp  YaleMsModel.cpp  YaleMsModel.hpp
base9/WdAtmosphereModels/: Bergeron2019AtmosphereModel.hpp  Bergeron2020AtmosphereModel.hpp  BergeronAtmosphereModel.cpp  BergeronAtmosphereModel.hpp  InvalidAtmosphereModel.hpp
base9/WdCoolingModels/: AlthausWdModel.cpp  AlthausWdModel.hpp  CarbonlessWdModel.cpp  CarbonlessWdModel.hpp  MontgomeryWdModel.cpp  MontgomeryWdModel.hpp  NewMontgomeryWdModel.cpp  NewMontgomeryWdModel.hpp  RenedoWdModel.cpp  RenedoWdModel.hpp  WoodWdModel.cpp  WoodWdModel.hpp
base9/sleef/: df.h  helpersse2.h  sleefsimd.h  sleefsimddp.c
base9/tests/: LinearTransform_unittest.hpp  Model_unittest.hpp  Star_unittest.hpp  base9_unittest.cpp  wdCooling_unittest.hpp
cmake/: GetProject.cmake  YamlCpp.cmake  yaml-cpp-CMakeLists.txt
conf/: base9.yaml
contrib/: CMakeLists.txt
docker/: Dockerfile  readme
docs/: Makefile  make.bat
docs/source/: Installation.rst  Skip-the-install-and-go-to-the-cloud.rst  conf.py  index.rst
hierarchicalWDs/: CMakeLists.txt  README.md  hierarchicalWDs.cpp
makeCMD/: CMakeLists.txt  makeCMD.c  makeCMD.cpp  makeCMD_flymake.cpp  makeCMDs.cpp  makeCMDwd.cpp
makeIsochrone/: CMakeLists.txt  makeIsochrone.c  makeIsochrone.cpp  makeIsochrone_flymake.cpp
mpiMcmc/: CMakeLists.txt  Chain.hpp  McmcApplication.cpp  McmcApplication.hpp  MpiMcmcApplication.cpp  MpiMcmcApplication.hpp  mpiFuncs.cpp  mpiFuncs.hpp  mpiMcmc.c  mpiMcmc.cpp  mpiMcmc.h  mpiMcmc.hpp  mpiMcmc.new.cpp  mpiMcmc.new_flymake.cpp  mpiMcmc_flymake.cpp
mpiMcmc/tests/: mpiFuncs_unittest.cpp  mpi_things.hpp
multiPopMcmc/: CMakeLists.txt  Chain.hpp  McmcApplication.cpp  McmcApplication.hpp  MpiMcmcApplication.cpp  MpiMcmcApplication.hpp  mpiFuncs.cpp  mpiMcmc.cpp  mpiMcmc.hpp
sampleMass/: CMakeLists.txt  Chain.hpp  README.md  sampleMass.cpp
sampleWDMass/: CMakeLists.txt  Chain.hpp  sampleWDMass.c  sampleWDMass.cpp  sampleWDMass_flymake_flymake.cpp
scatterCluster/: CMakeLists.txt  scatterCluster.c  scatterCluster.cpp  scatterCluster_flymake.cpp
scripts/: hyades.csh  plot_walker_README  plot_walker_base.py
scripts/sql/: runs.sql
simCluster/: CMakeLists.txt  drawFromIMF.c  drawFromIMF.cpp  drawFromIMF_flymake.cpp  simCluster.c  simCluster.cpp  simCluster_flymake.cpp
singlePopMcmc/: CMakeLists.txt  Chain.hpp  McmcApplication.cpp  McmcApplication.hpp  MpiMcmcApplication.cpp  MpiMcmcApplication.hpp  mpiFuncs.cpp  mpiMcmc.cpp  mpiMcmc.hpp
sqlTools/: CMakeLists.txt
sqlTools/include/: SqlQueryRunner.hpp
sqlTools/listRuns/: CMakeLists.txt  SqlQueryRunner.hpp  main.cpp
sqlTools/runSql/: CMakeLists.txt  main.cpp
